src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ACLS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of Certification.  Used by Credentialing.</description>
        <label>ACLS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATLS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of Certification.  Used by Credentialing.</description>
        <label>ATLS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Level__c</fullName>
        <label>Access Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions__c</fullName>
        <description>From file DocTracking, TSG fields = Actions and AnyOtherActions</description>
        <label>Actions</label>
        <picklist>
            <picklistValues>
                <fullName>License Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Actions - Explain</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Actively_Working_a_PFA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicate that the provider is working still active on at least one PFA.  This indicator need to be on the Contact to permit mass mailing tools to work.   It is updated manually by clearing all check marks (0) and then updating providers with at least one active PFA.  So Managing &amp; having accurate PFA statuses it critical.</description>
        <inlineHelpText>Identify those providers currently working.</inlineHelpText>
        <label>Actively Working a PFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advocacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advocacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AnalyticsAdWordID__c</fullName>
        <label>AnalyticsAdWordID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_ED_Volume__c</fullName>
        <label>Preferred Annual ED Volume</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 10,000</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10,000 - 20,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20,000 - 35,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35,000 - 50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,000 +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Answering_Service_Phone__c</fullName>
        <label>Answering Service Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AppSubmitted__c</fullName>
        <formula>IF(Application__r.Submitted__c = True, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AppSubmitted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Applicant__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <label>Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Asst_Email__c</fullName>
        <label>Asst. Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Asst_Phone_Ext__c</fullName>
        <description>This is the Extension to the Asst Phone</description>
        <label>Asst Phone Ext</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvailableDate__c</fullName>
        <description>Date Available for Hire</description>
        <label>Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Board Certified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beeper_Number_Ext__c</fullName>
        <description>This is the extsion number to the Beper Number</description>
        <label>Beeper Number Ext</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beeper_Number__c</fullName>
        <label>Beeper Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Birth_City__c</fullName>
        <description>If TSG data is mixed place all birth data in SFDC Birth City</description>
        <label>Birth City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Country__c</fullName>
        <label>Birth Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegowina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_County__c</fullName>
        <label>Birth County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_State__c</fullName>
        <label>Birth State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blackberry_Pin__c</fullName>
        <label>Blackberry PIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BoardPrepared__c</fullName>
        <description>Used to be BE</description>
        <label>Board Prepared</label>
        <picklist>
            <picklistValues>
                <fullName>Allergy &amp; Immunology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anesthesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colon &amp; Rectal Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostic Radiology (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Medicine (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrinology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Practice (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Practice (D.O. only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geriatric Medicine (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Medicine (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interventional Anesthesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Genetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurological Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology and Psychiatry (D.O. only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuromuskuloskeletal Medicine (D.O.only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstetrics &amp; Gynecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstetrics &amp; Gynecology (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ophthalmology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ophthalmology (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ophthalmology &amp; Otolaryngology (DO only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopaedic Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopaedic Surgery (ABPS/AAPS)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Board_Certification_Status__c</fullName>
        <label>Board Certification Status</label>
        <picklist>
            <picklistValues>
                <fullName>Board Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recertification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Board_Certified_Subspecialty__c</fullName>
        <description>Subspecialty from TSG Doc file.</description>
        <label>Board Certified Subspecialty</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board_Certified__c</fullName>
        <label>Board Certified</label>
        <picklist>
            <picklistValues>
                <fullName>Allergy &amp; Immunology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anesthesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colon &amp; Rectal Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostic Radiology (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Medicine (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrinology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Practice (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Practice (D.O. only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geriatric Medicine (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Medicine (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interventional Anesthesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Genetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurological Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology and Psychiatry (D.O. only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuromuskuloskeletal Medicine (D.O.only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstetrics &amp; Gynecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstetrics &amp; Gynecology (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ophthalmology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ophthalmology (ABPS/AAPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ophthalmology &amp; Otolaryngology (DO only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopaedic Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopaedic Surgery (ABPS/AAPS)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Board_Prepared__c</fullName>
        <label>Board Prepared</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAQH__c</fullName>
        <label>CAQH #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CV_Current_as_of__c</fullName>
        <label>CV/Resume Current as of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CV_Resume_Text__c</fullName>
        <label>CV/Resume Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CV_Resume__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From file DocTracking, TSG field = CV</description>
        <label>CV/Resume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Emerg_Contact_Phone_2_Receive_Text__c</fullName>
        <label>Can Emerg Contact Phone 2 Receive Text</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_Emergency_Contact_Phone__c</fullName>
        <label>Can Emerg Contact Phone 1 Receive Text</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Candidate_Tier__c</fullName>
        <label>Candidate Tier</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Career_Aspirations__c</fullName>
        <label>Career Aspirations</label>
        <picklist>
            <picklistValues>
                <fullName>Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area Medical Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Medical Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Mid-Level Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief of Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Professorship</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Certification_s__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From file DocTracking, TSG field = Board Cert</description>
        <label>Certification(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certifications__c</fullName>
        <label>Certifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Children__c</fullName>
        <label>Children Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Preference__c</fullName>
        <label>City Preference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Comments__c</fullName>
        <description>Actions on License and Claims History Notes.  For use by Risk Management.  Hidden from most users.</description>
        <label>Claims Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_History__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From file DocTracking, TSG field = ClaimsHistory</description>
        <label>Claims History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Communication_Preference_Comments__c</fullName>
        <label>Communication Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Preference__c</fullName>
        <description>Requested by Doug to track IT communication preferences.</description>
        <label>Preferred Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community_Size__c</fullName>
        <label>Community Size</label>
        <picklist>
            <picklistValues>
                <fullName>Rural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Completed_Annual_Client_Survey__c</fullName>
        <label>Completed Annual Client Survey</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <label>Contact ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Contact)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_Account_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Copy Account User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Tax_ID__c</fullName>
        <label>Corporate Tax ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporation_Address__c</fullName>
        <description>Address for Corporation; TSG DB has all the data in a single field. 5/2 Per Beth Smith-Usually, the contracting department (Lynn Leger, etc.) would be populating this field, on the rare occasion, recruiters might.  I am OK with them “owning” this field, therefore, you might want to contact them for direction.</description>
        <label>Corporation Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporation_City__c</fullName>
        <label>Corporation City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporation_Name__c</fullName>
        <description>TSG Corporation Field - Doc Corporation</description>
        <label>Corporation Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporation_State__c</fullName>
        <label>Corporation State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporation_Verification_Date__c</fullName>
        <label>Corporation Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Corporation_Zip_Postal_Code__c</fullName>
        <label>Corporation Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Global_ID_Sent__c</fullName>
        <label>Count of Global ID Sent</label>
        <summarizedField>Provider_Facility_Associations__c.Global_ID_Sent__c</summarizedField>
        <summaryFilterItems>
            <field>Provider_Facility_Associations__c.Global_ID_Sent__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Provider_Facility_Associations__c.Provider__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country_of_Citizenship__c</fullName>
        <label>Country of Citizenship</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credentialer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credentialier working the doctor record</description>
        <label>Credentialer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001HmF2EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credentialing_Completed_Date__c</fullName>
        <description>From file DocTracking, TSG field = on</description>
        <label>Credentialing Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credentialing_Start_Date__c</fullName>
        <description>From file DocTracking, TSG field = hdate ; Born on Date</description>
        <label>Credentialing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credentials__c</fullName>
        <label>Credentials</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CurrentEmployer__c</fullName>
        <description>Used to be current employer</description>
        <label>Current Employer</label>
        <type>TextArea</type>
    </fields>
</CustomObject>